--- a/src/IC.DotNet.Interview.Web/Views/Task/Edit.cshtml
+++ b/src/IC.DotNet.Interview.Web/Views/Task/Edit.cshtml
@@ -1,7 +1,9 @@
-﻿@model IC.DotNet.Interview.Logic.Models.TaskViewModel
+﻿@using IC.DotNet.Interview.Logic.Models; 
+@model IC.DotNet.Interview.Logic.Models.TaskViewModel
 
 @{
     ViewBag.Title = "Edit";
+    List<UserViewModel> userList = ViewBag.Users;
 }
 
 <h2>Edit Task</h2>
@@ -16,8 +18,8 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
-            @Html.HiddenFor(model => model.AssignedUser.Id)
-            @Html.HiddenFor(model => model.AssignedUser.Username)
+            @*@Html.HiddenFor(model => model.AssignedUser.Id)
+            @Html.HiddenFor(model => model.AssignedUser.Username)*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -46,8 +48,16 @@
             </div>
 
             <div class="form-group">
+                @Html.LabelFor(model => model.AssignedUser, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(x => Model.AssignedUser.Id, new SelectList(userList, "Id", "Username"), htmlAttributes: new { @class = "form-control", id = "Country" })
+                    @Html.ValidationMessageFor(x => Model.AssignedUser.Id, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </div>
         </div>
