--- a/src/IC.DotNet.Interview.Web/Views/Shared/_Layout.cshtml
+++ b/src/IC.DotNet.Interview.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                 <li class="nav-item active">
                     @Html.ActionLink("Task list", "Index", "Task", null, new { @class = "nav-link" })
                 </li>
+                <li class="nav-item active">
+                    @Html.ActionLink("Create task", "Create", "Task", null, new { @class = "nav-link" })
+                </li>
             </ul>
             <span class="navbar-text">
                 @{ Html.RenderAction("LoginButton", "User"); }
