--- a/src/IC.DotNet.Interview.Web/Views/Shared/_Layout.cshtml
+++ b/src/IC.DotNet.Interview.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var user = Context.Request.Cookies["CurrentUser"];
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,9 +22,12 @@
                 <li class="nav-item active">
                     @Html.ActionLink("Task list", "Index", "Task", null, new { @class = "nav-link" })
                 </li>
-                <li class="nav-item active">
-                    @Html.ActionLink("Create task", "Create", "Task", null, new { @class = "nav-link" })
-                </li>
+                @if (user != null)
+                {
+                    <li class="nav-item active">
+                        @Html.ActionLink("Create task", "Create", "Task", null, new { @class = "nav-link" })
+                    </li>
+                }
             </ul>
             <span class="navbar-text">
                 @{ Html.RenderAction("LoginButton", "User"); }
